Configure ChatWee admins via permissions

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -7,3 +7,6 @@ clarkwinkelmann-chatwee:
                 chatId: Chat ID
                 clientKey: Client Key
                 cookieDomain: Cookie Domain
+
+        permissions:
+            adminAccess: ChatWee Admin access
