Allow the user to login into chat without re-login into Flarum And control who can access the chat with a permission

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -9,4 +9,11 @@ clarkwinkelmann-chatwee:
                 cookieDomain: Cookie Domain
 
         permissions:
+            chatweeHeading: Chatwee
+            ssoLogin: Auto-login via SSO
             adminAccess: ChatWee Admin access
+
+    forum:
+        alert:
+            loggedOut: You are not connected to the live chat
+            login: Open the chat
