Set some default values

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -7,6 +7,7 @@ clarkwinkelmann-chatwee:
                 chatId: Chat ID
                 clientKey: Client Key
                 cookieDomain: Cookie Domain
+                enableForGuests: Enable for guests
 
         permissions:
             chatweeHeading: Chatwee
